# adv_dl_in_cv_exam

./: .dvcignore  .gitignore  Makefile  README.md  data.dvc  models.dvc  pyproject.toml  requirements.txt  sd_main.py  submit.sh  tmp.py
.dvc/: config
configs/: CLIP_config.yaml  config.yaml
src/: classifier_playground.py  main.py
src/dataloader/: all_images.py  annotated_image.py  base_class.py  corner_detection_loader.py  corner_detector_loader.py  crop_to_painting_frame.py  cropped_dataloader.py  data_plotting.py  encodings.py  paintphoto_dataset.py
src/encode_data/: encode_all_images.py  encode_wikiart_dataset.py
src/image_annotation/: annotate.py  corner_annotate.py  create_csv_for_all_annotations.py  elo_annotate.py  elo_annotation_to_dataset.py  find_duplicates.py  fix_wikiart.py
src/inference/: zeroshort_classifier.py
src/models/: CLIP.py  diffusion.py  diffusion_sampling.py  diffusion_utils.py  stable_diffusion.py
src/plots/: diff_sample_timeline.py  dtu_colors.py  elo_score_plots.py  wikiart_plots.py
src/scripts/: guided_sampling.py  npy2img.py  sample_diffusion_ucond.py
src/training/: clip_trainer.py  corner_detector_predict.py  corner_detector_train.py  train_head.py
src/utils/: FID.py  config.py  misc.py
